--- a/Makefile.in
+++ b/Makefile.in
@@ -235,6 +235,7 @@ CFG_LIBSYNTAX_$(1) :=$(call CFG_LIB_NAME_$(1),syntax)
 CFG_LIBRUSTPKG_$(1) :=$(call CFG_LIB_NAME_$(1),rustpkg)
 CFG_LIBRUSTDOC_$(1) :=$(call CFG_LIB_NAME_$(1),rustdoc)
 CFG_LIBRUSTUV_$(1) :=$(call CFG_LIB_NAME_$(1),rustuv)
+CFG_LIBRUSTBDW_$(1) :=$(call CFG_LIB_NAME_$(1),rustbdw)
 CFG_LIBGREEN_$(1) :=$(call CFG_LIB_NAME_$(1),green)
 CFG_LIBNATIVE_$(1) :=$(call CFG_LIB_NAME_$(1),native)
 
@@ -245,6 +246,7 @@ LIBSYNTAX_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),syntax)
 LIBRUSTPKG_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),rustpkg)
 LIBRUSTDOC_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),rustdoc)
 LIBRUSTUV_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),rustuv)
+LIBRUSTBDW_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),rustbdw)
 LIBGREEN_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),green)
 LIBNATIVE_GLOB_$(1) :=$(call CFG_LIB_GLOB_$(1),native)
 EXTRALIB_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),extra)
@@ -254,12 +256,14 @@ LIBSYNTAX_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),syntax)
 LIBRUSTPKG_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),rustpkg)
 LIBRUSTDOC_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),rustdoc)
 LIBRUSTUV_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),rustuv)
+LIBRUSTBDW_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),rustbdw)
 LIBGREEN_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),green)
 LIBNATIVE_DSYM_GLOB_$(1) :=$(call CFG_LIB_DSYM_GLOB_$(1),native)
 
 EXTRALIB_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,extra)
 STDLIB_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,std)
 LIBRUSTUV_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,rustuv)
+LIBRUSTBDW_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,rustbdw)
 LIBSYNTAX_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,syntax)
 LIBRUSTC_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,rustc)
 LIBNATIVE_RGLOB_$(1) :=$(call CFG_RLIB_GLOB,native)
@@ -334,6 +338,14 @@ LIBRUSTUV_INPUTS := $(wildcard $(addprefix $(S)src/librustuv/,          \
                                           *.rs */*.rs))
 
 ######################################################################
+# Rust BDW library variables
+######################################################################
+
+LIBRUSTBDW_CRATE := $(S)src/librustbdw/lib.rs
+LIBRUSTBDW_INPUTS := $(wildcard $(addprefix $(S)src/librustbdw/,          \
+                                          *.rs */*.rs))
+
+######################################################################
 # Green threading library variables
 ######################################################################
 
@@ -399,6 +411,18 @@ endef
 $(foreach host,$(CFG_HOST), \
  $(eval $(call DEF_LLVM_VARS,$(host))))
 
+define DEF_BDW_VARS
+# The configure script defines these variables with the target triples
+# separated by Z. This defines new ones with the expected format.
+CFG_BDW_BUILD_DIR_$(1):=$$(CFG_BDW_BUILD_DIR_$(subst -,_,$(1)))
+CFG_BDW_INST_DIR_$(1):=$$(CFG_BDW_INST_DIR_$(subst -,_,$(1)))
+
+endef
+
+$(foreach target,$(CFG_TARGET), \
+ $(eval $(call DEF_BDW_VARS,$(target))))
+
+
 ######################################################################
 # Exports for sub-utilities
 ######################################################################
@@ -412,6 +436,7 @@ export CFG_VERSION
 export CFG_VERSION_WIN
 export CFG_BUILD
 export CFG_LLVM_ROOT
+export CFG_BDW_ROOT
 export CFG_ENABLE_MINGW_CROSS
 export CFG_PREFIX
 export CFG_LIBDIR
@@ -461,6 +486,11 @@ HLIBRUSTUV_DEFAULT$(1)_H_$(3) = \
 TLIBRUSTUV_DEFAULT$(1)_T_$(2)_H_$(3) = \
   $$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTUV_$(2))
 
+HLIBRUSTBDW_DEFAULT$(1)_H_$(3) = \
+  $$(HLIB$(1)_H_$(3))/$(CFG_LIBRUSTBDW_$(3))
+TLIBRUSTBDW_DEFAULT$(1)_T_$(2)_H_$(3) = \
+  $$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTBDW_$(2))
+
 HLIBGREEN_DEFAULT$(1)_H_$(3) = \
   $$(HLIB$(1)_H_$(3))/$(CFG_LIBGREEN_$(3))
 TLIBGREEN_DEFAULT$(1)_T_$(2)_H_$(3) = \
@@ -482,6 +512,7 @@ HSREQ$(1)_H_$(3) = \
 	$$(HLIBSYNTAX_DEFAULT$(1)_H_$(3)) \
 	$$(HLIBRUSTC_DEFAULT$(1)_H_$(3)) \
 	$$(HLIBRUSTUV_DEFAULT$(1)_H_$(3)) \
+	$$(HLIBRUSTBDW_DEFAULT$(1)_H_$(3)) \
 	$$(HLIBGREEN_DEFAULT$(1)_H_$(3)) \
 	$$(HLIBNATIVE_DEFAULT$(1)_H_$(3)) \
 	$$(MKFILE_DEPS)
@@ -499,6 +530,7 @@ SREQ$(1)_T_$(2)_H_$(3) = \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_STDLIB_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_EXTRALIB_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTUV_$(2)) \
+	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTBDW_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBGREEN_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBNATIVE_$(2))
 
@@ -516,6 +548,7 @@ CSREQ$(1)_T_$(2)_H_$(3) = \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTPKG_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTDOC_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTUV_$(2)) \
+	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBRUSTBDW_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBGREEN_$(2)) \
 	$$(TLIB$(1)_T_$(2)_H_$(3))/$(CFG_LIBNATIVE_$(2))
 
