--- a/Makefile.in
+++ b/Makefile.in
@@ -549,7 +549,7 @@ endif
 STAGE$(1)_T_$(2)_H_$(3) := 						\
 	$$(Q)$$(call CFG_RUN_TARG_$(3),$(1),				\
 		$$(CFG_VALGRIND_COMPILE$(1)) 			\
-		$$(HBIN$(1)_H_$(3))/rustc$$(X_$(3))			\
+		time $$(HBIN$(1)_H_$(3))/rustc$$(X_$(3))			\
 		--cfg $$(CFGFLAG$(1)_T_$(2)_H_$(3))			\
 		$$(CFG_RUSTC_FLAGS) $$(EXTRAFLAGS_STAGE$(1)) --target=$(2)) \
                 $$(RUSTC_FLAGS_$(2))
@@ -557,7 +557,7 @@ STAGE$(1)_T_$(2)_H_$(3) := 						\
 PERF_STAGE$(1)_T_$(2)_H_$(3) := 				\
 	$$(Q)$$(call CFG_RUN_TARG_$(3),$(1),				\
 		$$(CFG_PERF_TOOL) 						\
-		$$(HBIN$(1)_H_$(3))/rustc$$(X_$(3))			\
+		time $$(HBIN$(1)_H_$(3))/rustc$$(X_$(3))			\
 		--cfg $$(CFGFLAG$(1)_T_$(2)_H_$(3))			\
 		$$(CFG_RUSTC_FLAGS) $$(EXTRAFLAGS_STAGE$(1)) --target=$(2)) \
                 $$(RUSTC_FLAGS_$(2))
